tests/ui/macros/macro-metavar-expr-concat/repetitions.stderr
error: invalid syntax
  --> $DIR/repetitions.rs:33:20
   |
LL |             const ${concat($a, Z)}: i32 = 3;
   |                    ^^^^^^^^^^^^^^^

error: invalid syntax
  --> $DIR/repetitions.rs:41:17
   |
LL |         read::<${concat($t, $en)}>();
   |                 ^^^^^^^^^^^^^^^^^

error: invalid syntax
  --> $DIR/repetitions.rs:41:17
   |
LL |         read::<${concat($t, $en)}>();
   |                 ^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 3 previous errors

